--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,6 @@
 @import'./components/advantages-icon';
 @import'./components/button-portfolio';
 @import'./components/team-icon';
-@import'./components/footer-content';
 @import'./components/component-class';
 @import'./components/modal-window';
 @import'./components/modal-label';
@@ -22,7 +21,7 @@
 @import'./layouts/pictures';
 @import'./layouts/team';
 @import'./layouts/clients';
-
+@import'./layouts/footer-content';
 
 @import'./pages/portfolio';
 
