--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -14,6 +14,10 @@
    .header >.container{
     display: flex;
     align-items: center;
+    @media screen and (max-width:480px) {
+      width: 480px;
+      height:60px;
+    }
    }
    .html{
     box-sizing:border-box;
