--- a/sass/components/_footer-label.scss
+++ b/sass/components/_footer-label.scss
@@ -55,3 +55,10 @@
   flex-direction: column;
   margin-right: 12px;
 }
+
+.form-thumb{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
