--- a/css/main.css
+++ b/css/main.css
@@ -180,122 +180,6 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer > .container {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-}
-
-.footer-soc-title {
-  margin-bottom: 20px;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: var(--primary-backgroungd-color);
-}
-
-.footer-soc-list {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  border-radius: 50%;
-  fill: var(--icon-color);
-}
-
-.footer-soc-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(255, 255, 255, 0.1);
-  color: #ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: 44px;
-  height: 44px;
-}
-
-.footer-soc-link:hover,
-.footer-soc-link:focus {
-  background-color: var(--accent-color);
-}
-
-.team-soc-icon,
-.clients-icon,
-.footer-soc-icon {
-  fill: currentColor;
-}
-
-.form-title {
-  text-align: start;
-  margin-bottom: 20px;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: var(--primary-backgroungd-color);
-}
-
-.footer-input {
-  display: block;
-  padding-left: 16px;
-  width: 358px;
-  height: 50px;
-  background-color: var(--background-color);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  font-weight: inherit;
-  font-size: 16px;
-  line-height: 1.25;
-  color: #ffffff;
-}
-
-.footer-btn {
-  position: relative;
-  width: 200px;
-  height: 50px;
-  padding-left: 28px;
-  cursor: pointer;
-  color: var(--primary-backgroungd-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  background-color: var(--accent-color);
-  border: 1px;
-  border-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  justify-content: center;
-  text-align: start;
-}
-
-.icon-send {
-  position: absolute;
-  left: 148px;
-  top: 13px;
-  fill: var(--primary-backgroungd-color);
-}
-
-.foot-form-field {
-  display: flex;
-  align-items: flex-end;
-}
-
-.footer-label {
-  display: flex;
-  flex-direction: column;
-  margin-right: 12px;
-}
-
-.form-thumb {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
-
 .advantages__list {
   text-align: center;
   gap: 30px;
@@ -680,7 +564,6 @@ header {
 }
 
 .menu-contact {
-  padding-left: 40px;
   margin-bottom: 64px;
 }
 
@@ -755,9 +638,10 @@ header {
   font-size: 18px;
   line-height: 22px;
   display: flex;
+  gap: 20px;
 }
 
-.menu-social :not(:last-child) {
+.menu-social:not(:last-child) {
   padding-right: 20px;
 }
 
@@ -767,6 +651,19 @@ header {
   font-size: 18px;
   line-height: 22px;
   letter-spacing: 0.02em;
+}
+
+.menu-social__item {
+  position: relative;
+}
+
+.menu-social__item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  right: -10px;
+  width: 1px;
+  height: 22px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 /*menu-btn*/
@@ -1016,9 +913,9 @@ header {
   width: calc((100% - 30px) / 2);
   height: 92px;
 }
-@media screen and (min-width: 768) {
+@media screen and (min-width: 768px) {
   .clients-item {
-    width: calc((100% - 30px) / 3);
+    width: calc((100% - 60px) / 3);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1032,7 +929,7 @@ header {
   height: 92px;
 }
 
-.footer-logo-adress {
+.footer-logo-address {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1047,7 +944,6 @@ header {
   color: var(--accent-color);
   text-decoration: none;
   color: var(--accent-color);
-  margin-bottom: 20px;
 }
 
 .accent-footer {
@@ -1075,7 +971,10 @@ header {
 }
 
 .footer-address {
+  display: flex;
+  justify-content: center;
   margin-top: 20px;
+  min-width: 231px;
 }
 
 .footer-item:not(:last-child) {
@@ -1091,6 +990,145 @@ header {
   .footer__container {
     width: 480px;
   }
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-soc, .thumb {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/*footer-lable*/
+.form-title {
+  text-align: start;
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--primary-backgroungd-color);
+}
+
+.footer-input {
+  display: block;
+  padding-left: 16px;
+  width: 358px;
+  height: 50px;
+  background-color: var(--background-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  font-weight: inherit;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #ffffff;
+}
+
+.footer-btn {
+  position: relative;
+  width: 200px;
+  height: 50px;
+  padding-left: 28px;
+  cursor: pointer;
+  color: var(--primary-backgroungd-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  border: 1px;
+  border-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  justify-content: center;
+  text-align: start;
+}
+
+.icon-send {
+  position: absolute;
+  left: 148px;
+  top: 13px;
+  fill: var(--primary-backgroungd-color);
+}
+
+.foot-form-field {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+}
+
+.footer-label {
+  display: flex;
+  flex-direction: column;
+  margin-right: 12px;
+}
+
+.form-thumb {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+/*footer-icon*/
+.footer > .container {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.footer-soc-title {
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--primary-backgroungd-color);
+}
+
+.footer-soc-list {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-radius: 50%;
+  fill: var(--icon-color);
+}
+
+.footer-soc-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 44px;
+  height: 44px;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: var(--accent-color);
+}
+
+.team-soc-icon,
+.clients-icon,
+.footer-soc-icon {
+  fill: currentColor;
+}
+
+.foot-form-field {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
 }
 
 .list-btn {
