--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -31,8 +31,8 @@
    .clients-item {
     width: calc((100% - 30px) / 2);
     height: 92px;
-    @media screen and(min-width:768){
-      width: calc((100% - 30px) / 3);
+    @media screen and(min-width:768px){
+      width: calc((100% - 60px) / 3);
       }
     @media screen and(min-width:1200px) {
         width: calc((100% - 150px) / 6);
