--- a/sass/layouts/_footer-content.scss
+++ b/sass/layouts/_footer-content.scss
@@ -1,4 +1,4 @@
-.footer-logo-adress {
+.footer-logo-address {
     //display: block;
     display: flex;
   flex-direction: column;
@@ -13,7 +13,7 @@
    color:var(--accent-color);
    text-decoration:none;
    color: var(--accent-color);
-   margin-bottom: 20px;
+   
   }
   .accent-footer{
     color: rgba(255, 255, 255, 1);}
@@ -36,7 +36,11 @@
        padding: 60px 0;
     }
     .footer-address{
-     margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+      min-width: 231px;
+     
     }
     .footer-item:not(:last-child) { 
      margin-bottom: 9px;
@@ -50,3 +54,143 @@
       width: 480px;
     }
    }
+
+   .footer-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center
+   }
+.footer-soc,.thumb{
+  margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
+
+
+
+
+
+
+   /*footer-lable*/
+   .form-title{
+    text-align: start;
+    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: var(--primary-backgroungd-color);
+  }
+  .footer-input{
+    display: block;
+    padding-left: 16px;
+    width: 358px;
+    height: 50px;
+    background-color: var(--background-color);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    font-weight: inherit;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #ffffff;
+  }
+  .footer-btn{
+    position: relative;
+    width: 200px;
+    height: 50px;
+    padding-left: 28px;
+    cursor: pointer;
+    color: var(--primary-backgroungd-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    background-color: var(--accent-color);
+    border: 1px;
+    border-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+    border-radius: 4px;
+    justify-content: center;
+    text-align: start;
+
+  }
+  .icon-send{
+    position: absolute;
+    left: 148px;
+    top: 13px;
+    fill:var(--primary-backgroungd-color);
+  }
+  .foot-form-field{
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+  }
+  .footer-label{
+    display: flex;
+  flex-direction: column;
+  margin-right: 12px;
+}
+
+.form-thumb{
+ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+/*footer-icon*/
+.footer >.container {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+.footer-soc-title{
+  margin-bottom: 20px;
+  font-size: 14px;
+line-height: 1.14;
+text-transform: uppercase;
+color: var(--primary-backgroungd-color);
+}
+.footer-soc-list{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-radius: 50%;
+  fill: var(--icon-color);
+}
+.footer-soc-link{
+  
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+      rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ width: 44px;
+ height: 44px;
+ 
+}
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+background-color:  var(--accent-color);
+
+} 
+.team-soc-icon,
+.clients-icon,
+.footer-soc-icon {
+fill: currentColor;
+}
+.foot-form-field{
+  display: flex;
+    align-items: center;
+    gap: 12px;
+    width: 100%;
+}
