--- a/css/main.css
+++ b/css/main.css
@@ -251,49 +251,6 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.thumb-team {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.team-soc-list {
-  margin-top: 16px;
-}
-
-.team-soc-item {
-  width: 44px;
-  height: 44px;
-}
-
-.team-soc-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-
-.team-soc-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  color: #AFB1B8;
-}
-
-.team-soc-link:hover,
-.team-soc-link:focus {
-  background-color: var(--accent-color);
-  color: var(--primary-backgroungd-color);
-}
-
-.team-soc-icon,
-.clients-icon,
-.footer-soc-icon {
-  fill: currentColor;
-}
-
 .section-title {
   font-size: 36px;
   line-height: 1.16;
@@ -323,8 +280,8 @@ body {
 }
 
 .modal {
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -334,6 +291,12 @@ body {
   border-radius: 4px;
   transform: translate(-50%, -50%) scaley(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden.modal {
@@ -700,32 +663,41 @@ header {
 
 .hero {
   background-color: var(--background-color);
-  padding: 200px 0;
+  padding: 118px 0;
   text-align: center;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imagens/img.hero.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../imagens/original/img.hero.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   margin: 0 auto;
+  width: 100%;
+}
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./imagens/mob/Header2x.mob.jpg");
+  }
 }
 
 .hero__title {
+  padding-bottom: 30px;
+  color: var(--primary-backgroungd-color);
   font-weight: 900;
   font-size: 26px;
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  max-width: 696px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.3;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--primary-backgroungd-color);
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
 }
 
 .hero__button {
@@ -880,8 +852,53 @@ header {
 }
 
 .team-list {
+  flex-wrap: wrap;
   display: flex;
   gap: 30px;
+}
+
+.thumb-team {
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.team-soc-list {
+  margin-top: 16px;
+}
+
+.team-soc-item {
+  width: 44px;
+  height: 44px;
+}
+
+.team-soc-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.team-soc-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  color: #AFB1B8;
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+  background-color: var(--accent-color);
+  color: var(--primary-backgroungd-color);
+}
+
+.team-soc-icon,
+.clients-icon,
+.footer-soc-icon {
+  fill: currentColor;
 }
 
 .clients-list {
@@ -934,7 +951,6 @@ header {
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin-left: 123px;
 }
 
 .logo-link-footer {
@@ -986,9 +1002,20 @@ header {
   flex-direction: column;
   align-items: center;
 }
-@media screen and (max-width: 489px) {
+@media screen and (max-width: 480px) {
   .footer__container {
     width: 480px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-logo-address {
+    padding-right: 165px;
   }
 }
 
@@ -1005,6 +1032,26 @@ header {
   align-items: center;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-soc {
+    margin: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .address-soc {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .address-soc {
+    display: flex;
+    justify-content: start;
+    align-items: baseline;
+    gap: 70px;
+  }
+}
+
 /*footer-lable*/
 .form-title {
   text-align: start;
@@ -1016,9 +1063,9 @@ header {
 }
 
 .footer-input {
+  width: 100%;
   display: block;
   padding-left: 16px;
-  width: 358px;
   height: 50px;
   background-color: var(--background-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1061,15 +1108,34 @@ header {
   display: flex;
   align-items: flex-end;
   flex-direction: column;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .foot-form-field {
+    align-items: flex-start;
+    flex-direction: row;
+  }
 }
 
 .footer-label {
   display: flex;
   flex-direction: column;
   margin-right: 12px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .footer-label {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-label {
+    width: 358px;
+  }
 }
 
 .form-thumb {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1079,7 +1145,6 @@ header {
 /*footer-icon*/
 .footer > .container {
   display: flex;
-  align-items: baseline;
   justify-content: space-between;
 }
 
@@ -1130,7 +1195,6 @@ header {
   gap: 12px;
   width: 100%;
 }
-
 .list-btn {
   display: flex;
   justify-content: center;
