--- a/sass/layouts/_footer-content.scss
+++ b/sass/layouts/_footer-content.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin-left: 123px;
+
   }
   .logo-link-footer{
    font-family: 'Raleway';
@@ -50,11 +50,19 @@
     flex-direction: column;
     align-items: center;
      
-    @media screen  and (max-width:489px){
+    @media screen  and (max-width:480px){
       width: 480px;
     }
+    @media screen and(min-width:1200px) {
+      display: flex;
+    }
    }
-
+.footer-logo-address{
+  @media screen and(min-width:768px) {
+    padding-right: 165px;
+    
+  }
+}
    .footer-list{
     display: flex;
     flex-direction: column;
@@ -66,8 +74,24 @@
     flex-direction: column;
     align-items: center;
 }
-
-
+@media screen and (min-width:768px){
+  .footer-soc{
+    margin:0;
+   }
+}
+  
+.address-soc{
+  @media screen and(min-width:768px) {
+    display: flex;
+    justify-content: space-around;
+  }
+  @media screen and(min-width:1200px) {
+    display: flex;
+    justify-content: start;
+    align-items: baseline;
+    gap: 70px;
+  }
+}
 
 
 
@@ -85,9 +109,9 @@
     color: var(--primary-backgroungd-color);
   }
   .footer-input{
+    width: 100%;
     display: block;
     padding-left: 16px;
-    width: 358px;
     height: 50px;
     background-color: var(--background-color);
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -128,25 +152,38 @@
     display: flex;
     align-items: flex-end;
     flex-direction: column;
+    width: 100%;
+    @media screen and(min-width:1200px) {
+      align-items: flex-start;
+      flex-direction: row;
+    }
   }
   .footer-label{
     display: flex;
   flex-direction: column;
   margin-right: 12px;
+  width: 100%;
+  @media screen and(min-width:768px) {
+    width: 450px;
+  }
+  @media screen and(min-width:1200px) {
+    width: 358px;
+  }
 }
 
 .form-thumb{
- 
+ width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
 }
+
 /*footer-icon*/
 .footer >.container {
   display: flex;
-  align-items: baseline;
   justify-content: space-between;
+ 
 }
 .footer-soc-title{
   margin-bottom: 20px;
@@ -193,4 +230,8 @@ fill: currentColor;
     align-items: center;
     gap: 12px;
     width: 100%;
+    @media screen and(min-width:1200px) {
+      
+    }
 }
+
