--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,39 +1,60 @@
 .hero{
     background-color:var(--background-color);
-   padding: 200px 0;
-     text-align: center; 
-   background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
-   url(../imagens/img.hero.jpg);
-     background-repeat: no-repeat;
- background-position: center;
-     background-size: cover;
-     margin:  0 auto;
-    
-
-
-
-
+    padding: 118px 0;
+    text-align: center; 
+    background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
+   url('../imagens/original/img.hero.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin:  0 auto;
+    width:100%;
+    @media screen and(min-width:480px) {
+      @media (min-device-pixel-ratio:2),
+             (min-resolution: 192dpi),
+             (min-resolution: 2dppx) {
+              background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
+              url('./imagens/mob/Header2x.mob.jpg')}
+              }
   }
+   
+             
+            
   
   .hero__title{
 
-    font-weight: 900;
-    font-size: 26px;
-    line-height: 42px;  
-    text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-    text-align: center;
-  margin: 0 auto;
-  margin-bottom: 30px;
- max-width: 696px;
-   font-weight: 900;
-   font-size: 44px;
-   line-height:1.3;
+  //   font-weight: 900;
+  //   font-size: 26px;
+  //   line-height: 42px;  
+  //   text-align: center;
+  //   letter-spacing: 0.06em;
+  //   text-transform: uppercase;
+  //   text-align: center;
+  //   margin: 0 auto;
+  //   max-width: 696px;
+  //  font-size: 44px;
+  //  line-height:1.3;
+  // letter-spacing: 0.06em;
+  // text-transform: uppercase;
+  padding-bottom: 30px;
+  color:var(--primary-backgroungd-color);
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 42px;
+  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color:var(--primary-backgroungd-color);
+  @media screen and(min-width:768px) {
+  font-style: normal;
+  font-weight: 900;
+   font-size: 26px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
   }
+  
   .hero__button{
     margin: 0 auto;
      border-radius: 4px;
@@ -52,12 +73,11 @@ text-transform: uppercase;
      }
   .hero__button:hover,
   .hero__button:focus,
-  .hero__button:active { 
+  .hero__button:active {
     text-align: center; 
     font-weight: 500; 
    font-size: 16px;
    line-height: 1.62; 
    letter-spacing: 0.03em; 
    color: var(--primary-backgroungd-color); 
-   background-color: var(--accent-color);
-  }
+   background-color: var(--accent-color);}
