--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -47,6 +47,10 @@
   justify-content: center;
   cursor: pointer;
   outline: transparent;
+
+  &:hover,:focus{
+    border-color: var(--accent-color);
+  }
 }
    
  .backdrop.is-hidden{
