--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,6 @@ p, h1, h2, h3, h4, h5, h6, ul, ol {
   display: flex;
   align-items: center;
 }
-@media screen and (max-width: 480px) {
-  .header > .container {
-    width: 480px;
-    height: 60px;
-  }
-}
 
 .html {
   box-sizing: border-box;
@@ -319,6 +313,9 @@ body {
   justify-content: center;
   cursor: pointer;
   outline: transparent;
+}
+.button-close:hover, .button-close :focus {
+  border-color: var(--accent-color);
 }
 
 .backdrop.is-hidden {
@@ -672,31 +669,55 @@ header {
   margin: 0 auto;
   width: 100%;
 }
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+  }
+}
 @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./imagens/mob/Header2x.mob.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../imagens/mob/header@2x.mob.jpg");
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../imagens/tablet/header@1x.tab.jpg");
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../imagens/tablet/header@2x.tab.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../imagens/desktop/header@1x.desktop.jpg");
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../imagens/desktop/header@2x.desktop.jpg");
   }
 }
 
 .hero__title {
-  padding-bottom: 30px;
-  color: var(--primary-backgroungd-color);
+  margin: 0 auto;
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 26px;
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  color: var(--primary-backgroungd-color);
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .hero__title {
-    font-style: normal;
+    max-width: 696px;
     font-weight: 900;
-    font-size: 26px;
-    line-height: 42px;
-    text-align: center;
+    font-size: 44px;
+    line-height: 1.36;
     letter-spacing: 0.06em;
-    text-transform: uppercase;
   }
 }
 
@@ -850,6 +871,16 @@ header {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+@media screen and (min-width: 768px) {
+  .taem-item {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .taem-item {
+    max-width: 270px;
+  }
+}
 
 .team-list {
   flex-wrap: wrap;
@@ -1001,11 +1032,6 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-@media screen and (max-width: 480px) {
-  .footer__container {
-    width: 480px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .footer__container {
