--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -9,49 +9,57 @@
     background-size: cover;
     margin:  0 auto;
     width:100%;
+@media screen and(min-width:1200px) {
+  padding: 200px 0 ;
+}
     @media screen and(min-width:480px) {
       @media (min-device-pixel-ratio:2),
              (min-resolution: 192dpi),
              (min-resolution: 2dppx) {
               background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
-              url('./imagens/mob/Header2x.mob.jpg')}
-              }
-  }
-   
-             
-            
-  
-  .hero__title{
+              url('../imagens/mob/header@2x.mob.jpg')}
+ }
+ @media screen and(min-width:768px) {
+       background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
+      url('../imagens/tablet/header@1x.tab.jpg');
 
-  //   font-weight: 900;
-  //   font-size: 26px;
-  //   line-height: 42px;  
-  //   text-align: center;
-  //   letter-spacing: 0.06em;
-  //   text-transform: uppercase;
-  //   text-align: center;
-  //   margin: 0 auto;
-  //   max-width: 696px;
-  //  font-size: 44px;
-  //  line-height:1.3;
-  // letter-spacing: 0.06em;
-  // text-transform: uppercase;
-  padding-bottom: 30px;
-  color:var(--primary-backgroungd-color);
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  @media screen and(min-width:768px) {
-  font-style: normal;
-  font-weight: 900;
-   font-size: 26px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+  @media (min-device-pixel-ratio:2),
+         (min-resolution: 192dpi),
+         (min-resolution: 2dppx) {
+      background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
+        url('../imagens/tablet/header@2x.tab.jpg')}
+              }
+
+     @media screen and(min-width:1200px) {
+      
+       background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
+      url('../imagens/desktop/header@1x.desktop.jpg');
+      
+ @media (min-device-pixel-ratio:2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+   background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
+    url('../imagens/desktop/header@2x.desktop.jpg')}
+  }
+   }
+       
+  .hero__title{
+    margin: 0 auto;
+    margin-bottom: 30px;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--primary-backgroungd-color);
+
+@media screen and (min-width:1200px) {
+    max-width: 696px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: .06em;
 }
   }
   
