--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -23,6 +23,12 @@
     0px 1px 1px rgba(0, 0, 0, 0.14), 
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    @media screen and(min-width:768px) {
+      max-width: 354px;
+    }
+    @media screen  and(min-width:1200px){
+      max-width: 270px;
+    }
   }
   
   .team-list{
