--- a/css/main.css
+++ b/css/main.css
@@ -274,8 +274,7 @@ body {
 }
 
 .modal {
-  width: 450px;
-  height: 609px;
+  overflow: auto;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -285,6 +284,12 @@ body {
   border-radius: 4px;
   transform: translate(-50%, -50%) scaley(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
@@ -405,6 +410,19 @@ body {
   outline: transparent;
 }
 
+.agreement-text {
+  font-size: 8px;
+  line-height: 1.71;
+  color: #757575;
+  cursor: pointer;
+}
+@media screen and (min-width: 480px) {
+  .agreement-text {
+    font-size: 12px;
+    line-height: 1.71;
+  }
+}
+
 header {
   border-bottom: 1px solid #ececec;
 }
@@ -515,10 +533,6 @@ header {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.accent {
-  color: var(--accent-color);
-}
-
 .svg-menu.svg-cross {
   background-color: var(--primary-backgroungd-color);
 }
@@ -553,10 +567,11 @@ header {
   position: fixed;
   top: 0;
   background-color: #fff;
-  width: 480px;
-  height: 796px;
+  width: 100vw;
+  height: 100vh;
   z-index: 1;
   background-color: var(--primary-backgroungd-color);
+  overflow: auto;
 }
 .mob.is-hidden {
   opacity: 0;
@@ -656,6 +671,10 @@ header {
   background-color: transparent;
   border: transparent;
   cursor: pointer;
+}
+
+.accent {
+  color: var(--accent-color);
 }
 
 .hero {
@@ -983,6 +1002,11 @@ header {
   align-items: center;
   gap: 20px;
 }
+@media screen and (min-width: 1200px) {
+  .footer-logo-address {
+    align-items: flex-start;
+  }
+}
 
 .logo-link-footer {
   font-family: "Raleway";
@@ -1039,16 +1063,15 @@ header {
   }
 }
 
-@media screen and (min-width: 768px) {
-  .footer-logo-address {
-    padding-right: 165px;
-  }
-}
-
 .footer-list {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-list {
+    align-items: flex-start;
+  }
 }
 
 .footer-soc, .thumb {
@@ -1063,6 +1086,12 @@ header {
     margin: 0;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer-soc {
+    align-items: flex-start;
+    margin-bottom: 0;
+  }
+}
 @media screen and (min-width: 768px) {
   .address-soc {
     display: flex;
@@ -1071,10 +1100,7 @@ header {
 }
 @media screen and (min-width: 1200px) {
   .address-soc {
-    display: flex;
-    justify-content: start;
-    align-items: baseline;
-    gap: 70px;
+    align-items: flex-start;
   }
 }
 
@@ -1167,11 +1193,16 @@ header {
   align-items: center;
   gap: 20px;
 }
+@media screen and (min-width: 1200px) {
+  .form-thumb {
+    width: auto;
+    align-items: flex-start;
+  }
+}
 
 /*footer-icon*/
 .footer > .container {
   display: flex;
-  justify-content: space-between;
 }
 
 .footer-soc-title {
@@ -1221,6 +1252,26 @@ header {
   gap: 12px;
   width: 100%;
 }
+.footer__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    align-items: baseline;
+    justify-content: space-between;
+  }
+}
+
 .list-btn {
   display: flex;
   justify-content: center;
