--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -9,8 +9,8 @@
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
   }
   .modal{
-    width: 450px;
-    height: 609px;
+    
+   overflow: auto;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -23,6 +23,10 @@
      border-radius: 4px;
      transform: translate(-50%,-50%) scaley(1);
      transition: transform 250ms  cubic-bezier(0.4, 0, 0.2, 1);
+     @media screen and(min-width:480px) {
+      width: 450px;
+      height:609px;
+     }
      @media screen and(min-width:1200px) {
       width: 528px;
       height: 581px;
