--- a/sass/layouts/_footer-content.scss
+++ b/sass/layouts/_footer-content.scss
@@ -4,7 +4,9 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-
+@media screen and(min-width:1200px) {
+  align-items: flex-start;
+}
   }
   .logo-link-footer{
    font-family: 'Raleway';
@@ -55,16 +57,14 @@
       display: flex;
     }
    }
-.footer-logo-address{
-  @media screen and(min-width:768px) {
-    padding-right: 165px;
-    
-  }
-}
-   .footer-list{
+
+  .footer-list{
     display: flex;
     flex-direction: column;
-    align-items: center
+    align-items: center;
+    @media screen and(min-width:1200px) {
+      align-items: flex-start;
+    }
    }
 .footer-soc,.thumb{
   margin-top: 60px;
@@ -77,17 +77,20 @@
     margin:0;
    }
 }
-  
+@media screen and (min-width:1200px){
+  .footer-soc{
+    align-items: flex-start;
+    margin-bottom: 0;
+   }
+}
 .address-soc{
+  
   @media screen and(min-width:768px) {
     display: flex;
     justify-content: space-around;
   }
   @media screen and(min-width:1200px) {
-    display: flex;
-    justify-content: start;
-    align-items: baseline;
-    gap: 70px;
+    align-items: flex-start;
   }
 }
 
@@ -175,12 +178,16 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  @media screen and(min-width:1200px) {
+    width: auto;
+    align-items: flex-start;
+  }
 }
 
 /*footer-icon*/
 .footer >.container {
   display: flex;
-  justify-content: space-between;
+  
  
 }
 .footer-soc-title{
@@ -233,3 +240,20 @@ fill: currentColor;
     }
 }
 
+.footer__container{
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  @media screen and(min-width:768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
+
+ @media screen and(min-width:1200px) {
+  align-items: baseline;
+  justify-content: space-between;
+ }
+}
