--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -94,9 +94,7 @@ header{
      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  
- .accent{
-   color:var(--accent-color);
- }
+
 
  .svg-menu.svg-cross{
 background-color: var(--primary-backgroungd-color);
@@ -130,10 +128,11 @@ letter-spacing: 0.02em;
   position: fixed;
   top: 0;
   background-color: #fff;
-  width: 480px;
-  height: 796px;
+  width: 100vw;
+  height: 100vh;
   z-index: 1;
   background-color: var(--primary-backgroungd-color);
+  overflow: auto;
 &.is-hidden{
  opacity: 0;
  visibility: hidden;
@@ -143,6 +142,7 @@ letter-spacing: 0.02em;
   display: none; 
 }
 }
+
 .mob-menu{
   margin-top: 48px;
   margin-bottom:302px;
@@ -223,3 +223,6 @@ position: relative;
 }
 
  
+.accent{
+  color:var(--accent-color);
+}
