--- a/css/main.css
+++ b/css/main.css
@@ -431,7 +431,7 @@ header {
   display: flex;
   gap: 50px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .nav-list {
     display: none;
   }
@@ -448,7 +448,7 @@ header {
   font-size: 12px;
   line-height: 14px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .list-contact {
     display: none;
   }
@@ -495,6 +495,7 @@ header {
 .contacts-link {
   color: var(--primary-text-color);
   gap: 10px;
+  font-size: 14px;
 }
 
 .accent-header {
@@ -566,6 +567,7 @@ header {
 .mob {
   position: fixed;
   top: 0;
+  left: 0;
   background-color: #fff;
   width: 100vw;
   height: 100vh;
@@ -686,7 +688,7 @@ header {
   background-position: center;
   background-size: cover;
   margin: 0 auto;
-  width: 100%;
+  max-width: 1600px;
 }
 @media screen and (min-width: 1200px) {
   .hero {
@@ -729,6 +731,11 @@ header {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-backgroungd-color);
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    max-width: 360px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
@@ -1080,6 +1087,11 @@ header {
   flex-direction: column;
   align-items: center;
 }
+@media screen and (min-width: 1200px) {
+  .footer-soc, .thumb {
+    margin-top: 0;
+  }
+}
 
 @media screen and (min-width: 768px) {
   .footer-soc {
@@ -1107,6 +1119,7 @@ header {
 /*footer-lable*/
 .form-title {
   text-align: start;
+  font-weight: 700;
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 1.14;
@@ -1197,6 +1210,7 @@ header {
   .form-thumb {
     width: auto;
     align-items: flex-start;
+    max-width: 1600px;
   }
 }
 
