--- a/sass/layouts/_footer-content.scss
+++ b/sass/layouts/_footer-content.scss
@@ -71,6 +71,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and(min-width:1200px) {
+      margin-top: 0;
+    }
 }
 @media screen and (min-width:768px){
   .footer-soc{
@@ -103,6 +106,7 @@
    /*footer-lable*/
    .form-title{
     text-align: start;
+    font-weight: 700;
     margin-bottom: 20px;
     font-size: 14px;
     line-height: 1.14;
@@ -180,7 +184,7 @@
   gap: 20px;
   @media screen and(min-width:1200px) {
     width: auto;
-    align-items: flex-start;
+    align-items: flex-start;max-width: 1600px;
   }
 }
 
