--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,13 +5,13 @@ header{
    .nav-list{
     display: flex;
     gap: 50px;
-    @media screen  and (max-width:768px){
+    @media screen  and (max-width:767px){
       display: none;
       
     }
    }
    .list-contact{
-    @media screen and (max-width:768px) {
+    @media screen and (max-width:767px) {
       display: none;
 
     }
@@ -62,6 +62,7 @@ header{
    .contacts-link{
     color: var(--primary-text-color);
     gap: 10px;
+    font-size: 14px;
    }
    .accent-header{
      color: var(--title-text-color);}
@@ -127,6 +128,7 @@ letter-spacing: 0.02em;
  
   position: fixed;
   top: 0;
+  left: 0;
   background-color: #fff;
   width: 100vw;
   height: 100vh;
