--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -109,9 +109,9 @@ background-color: var(--primary-backgroungd-color);
   color: var(--primary-text-color);
   text-decoration: none;
   font-weight: 500;
-font-size: 34px;
-line-height: 40px;
-letter-spacing: 0.02em;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
 }
 .menu-contact__item{
   margin-left: 40px ;
@@ -125,11 +125,9 @@ letter-spacing: 0.02em;
 }
 /*menu*/
 .mob{
- 
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #fff;
   width: 100vw;
   height: 100vh;
   z-index: 1;
@@ -179,9 +177,17 @@ letter-spacing: 0.02em;
 .menu-social__link{
   color: var(--accent-color);
   text-decoration: none;
-  font-size: 18px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.22;
+  letter-spacing: .02em;
+  
+  @media screen and(min-width:480px) {
+    font-size: 18px;
   line-height: 22px;
-  letter-spacing: 0.02em;
+ 
+  }
+  
 }
 .menu-social__item{
 position: relative;
@@ -194,6 +200,7 @@ position: relative;
   height: 22px;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
+
 /*menu-btn*/
 .btn-menu-open{
   display: flex;
@@ -221,10 +228,15 @@ position: relative;
   background-color: transparent;
   border: transparent;
   cursor: pointer;
-
 }
 
- 
 .accent{
   color:var(--accent-color);
+}
+.tel{
+  font-weight: 500;
+font-size: 34px;
+line-height: 40px;
+letter-spacing: 0.02em;
+color: var(--accent-color);
 }
