--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -3,7 +3,7 @@
     padding: 118px 0;
     text-align: center; 
     background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
-   url('../imagens/original/img.hero.jpg');
+   url('../imagens/mob/header@1x.mob.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
