--- a/sass/layouts/_footer-content.scss
+++ b/sass/layouts/_footer-content.scss
@@ -6,6 +6,7 @@
   gap: 20px;
 @media screen and(min-width:1200px) {
   align-items: flex-start;
+  gap: 0;
 }
   }
   .logo-link-footer{
@@ -42,7 +43,9 @@
       justify-content: center;
       margin-top: 20px;
       min-width: 231px;
-     
+     @media screen and(min-width:1200px) {
+      min-width: none;
+     }
     }
     .footer-item:not(:last-child) { 
      margin-bottom: 9px;
@@ -245,7 +248,7 @@ fill: currentColor;
 }
 
 .footer__container{
-  display: flex;
+     display: flex;
     flex-direction: column;
     align-items: center;
 
@@ -257,7 +260,6 @@ fill: currentColor;
   }
 
  @media screen and(min-width:1200px) {
-  align-items: baseline;
   justify-content: space-between;
  }
 }
