--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -20,12 +20,12 @@
  @media screen and(min-width:768px) {
        background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
       url('../imagens/tablet/header@1x.tab.jpg');
-      
+
       @media (min-device-pixel-ratio:2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
  background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
-  url('../imagens/desktop/header@2x.desktop.jpg')}
+  url('../imagens/tablet/header@2x.tab.jpg')}
  }
      @media screen and(min-width:1200px) {
       
@@ -44,12 +44,15 @@
     margin: 0 auto;
     margin-bottom: 30px;
     font-weight: 900;
-    font-size: 26px;
+    font-size: 20px;
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--primary-backgroungd-color);
+    @media screen  and(min-width:480px){
+      font-size: 26px;
+    }
      @media screen and(min-width:768px) {
       max-width:360px;;
      }
