--- a/sass/components/_modal-label.scss
+++ b/sass/components/_modal-label.scss
@@ -3,9 +3,12 @@
       text-align: center;
       font-family: inherit;
       font-weight: 700;
-      font-size: 20px;
+      font-size: 16px;
       line-height: 1.17;
       color:var(--title-text-color);
+      @media screen and(min-width:480px) {
+        font-size: 20px;
+      }
   }
   .modal-list:not(:last-child) {
     margin-bottom: 10px;
