--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -38,6 +38,9 @@
       color: var(--title-text-color);
       line-height: 1.17;
       text-transform: uppercase;
+      @media screen and(min-width:768px) {
+        text-align: start;
+      }
     }
     
     .advantages__description{
