--- a/sass/layouts/_footer-content.scss
+++ b/sass/layouts/_footer-content.scss
@@ -40,7 +40,7 @@
     }
     .footer-address{
       display: flex;
-      justify-content: center;
+      justify-content: start;
       margin-top: 20px;
       min-width: 231px;
      @media screen and(min-width:1200px) {
