--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -21,18 +21,18 @@
        background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
       url('../imagens/tablet/header@1x.tab.jpg');
 
-      @media (min-device-pixel-ratio:2),
+      @media screen and (min-device-pixel-ratio:2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
  background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
-  url('../imagens/tablet/header@2x.tab.jpg')}
+  url('../imagens/tablet/header.jpg')}
  }
      @media screen and(min-width:1200px) {
       
        background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
       url('../imagens/desktop/header@1x.desktop.jpg');
       
- @media (min-device-pixel-ratio:2),
+ @media  (min-device-pixel-ratio:2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
    background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
